k8s/echo-api/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo
  labels:
    gateway-access: "true"
